manifests/base/resources/reporting/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8282"
    prometheus.io/scrape: "true"
  labels:
    app: reporting
    chart: reporting-1.18.13
    heritage: Helm
    release: reporting
  name: reporting
spec:
  ports:
  - name: reporting
    port: 8282
    targetPort: 8282
  selector:
    app: reporting
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8383"
    prometheus.io/scrape: "true"
  labels:
    app: reporting
  name: reporting-cmp
spec:
  ports:
  - name: reporting-cmp
    port: 8383
    targetPort: 8383
  selector:
    app: reporting
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8484"
    prometheus.io/scrape: "true"
  labels:
    app: reporting
  name: reporting-rpr
spec:
  ports:
  - name: reporting-rpr
    port: 8484
    targetPort: 8484
  selector:
    app: reporting
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reporting
  name: reporting-rwr
spec:
  ports:
  - name: reporting-rwr
    port: 9288
    targetPort: 9288
  selector:
    app: reporting
---
