manifests/base/resources/reporting/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://reporting-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/v1/(.*) /v1/$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: reporting
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: reporting
          servicePort: 8282
        path: /api/v1/images
      - backend:
          serviceName: reporting
          servicePort: 8282
        path: /api/v1/reports
      - backend:
          serviceName: reporting
          servicePort: 8282
        path: /api/v1/files
---
